# mlops-vehicle-insurance-claims

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml  requirements.txt  run.py  train.py
data/collection/: __init__.py  db_create.py  db_stream.py  meta.py  utils.py
data_collection/: __init__.py  db_clear.py  db_create.py  db_stream.py  sqlite_ingest.py  utils.py
database/: __init__.py  db_clear.py  db_create.py  db_stream.py  utils.py
doc/: grade.md  task.md
models/: __init__.py  base.py  catboost_regressor.py  nn_regressor.py
preprocessing/: __init__.py  numeric_only.py
seminars/: Dockerfile  MLOps_Lab_1_Mirova.ipynb  lab1.ipynb  lab2.ipynb  model_best.pickle  predict.py  test_data.pickle  train_data.pickle
seminars/mlops_lab2/: Dockerfile  MLOps_Lab_2_Mirova.ipynb  lab2_cli.py  model_best.pickle
src/data/database/: __init__.py  db_clear.py  db_create.py  db_stream.py  meta.py  stats.py
src/data/quality/: __init__.py  association.py  binarization.py  clean.py  drift.py  eda.py  pipeline.py  quality_check.py  quality_report.py  stats.py
src/data/utils/: __init__.py  utils.py
src/database/: __init__.py  db_clear.py  db_create.py  db_stream.py  utils.py
src/models/: base.py  catboost_regressor.py  nn_regressor.py
src/monitoring/: model_drift.py
src/preprocessing/: __init__.py  base.py  feature_engineering.py  numeric_only.py  preprocess_config.py  stream_train_data.py  train_dataset.py  train_matrix.py  train_target.py
src/training/: __init__.py
src/training/models/: __init__.py  flexible_model.py  (+2 more)
(+3 files in other folders)
